--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "tailwindcss": "^3.4.4"
   },
   "devDependencies": {
+    "gsap": "^3.12.5",
     "prettier": "^3.3.2",
     "prettier-plugin-astro": "^0.14.0"
   }
