--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@astrojs/tailwind": "^5.1.0",
     "astro": "^4.11.5",
+    "sass": "^1.77.7",
     "tailwindcss": "^3.4.4"
   },
   "devDependencies": {
